apps/openldap/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openldap
      app.kubernetes.io/name: openldap
  serviceName: openldap
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: openldap
        app.kubernetes.io/name: openldap
    spec:
      containers:
        - name: openldap
          image: osixia/openldap:1.5.0
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: ldaps
          ports:
            - name: ldap
              containerPort: 389
            - name: ldaps
              containerPort: 636
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            tcpSocket:
              port: ldaps
          volumeMounts:
            - name: data
              mountPath: /var/lib/ldap
            - name: data
              mountPath: /etc/ldap/slapd.d
              subPath: config
            - name: certs
              mountPath: /container/service/slapd/assets/certs
      securityContext:
        fsGroup: 1001
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openldap
        - name: certs
          emptyDir: {}
        - name: tls-secret
          secret:
            secretName: openldap-tls
