apps/openldap/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  ports:
    - name: ldap
      port: 389
      targetPort: ldap
    - name: ldaps
      port: 636
      targetPort: ldaps
  selector:
    app.kubernetes.io/instance: openldap
    app.kubernetes.io/name: openldap
